--- a/Budgety Planning App/style.css
+++ b/Budgety Planning App/style.css
@@ -21,6 +21,13 @@ body {
     position: relative;
     height: 100vh;
     font-weight: 400;
+    background: #ECE9E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /* background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+     */
+
 }
 
 .right { float: right; }
@@ -33,12 +40,14 @@ body {
 
 .top {
     height: 40vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(back-1.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
 }
-
+.bottom{
+  
+}
 .budget {
     position: absolute;
     width: 350px;
