--- a/Budget Planning App/style.css
+++ b/Budget Planning App/style.css
@@ -22,9 +22,8 @@ body {
     height: 100vh;
     font-weight: 400;
     background: #ECE9E6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+    
     /* background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
      */
 
@@ -45,9 +44,7 @@ body {
     background-position: center;
     position: relative;
 }
-.bottom{
-  
-}
+
 .budget {
     position: absolute;
     width: 350px;
